# rust-vros-simulate

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  auto.sh  auto_hit.sh  auto_pc.sh  demo.ipynb  elephant_96_20_1200_1600.txt  elephant_96_20_1600_2000.txt  elephant_96_20_1800_2400.txt  power.json  power_1080p.json  power_1224.json  power_4k_360.json
object_as_cluster/: elephant.json  nyc.json  paris.json  rhinos.json  roller.json
src/: constants.rs  ds.rs  lib.rs  main.rs  simulator.rs
tests/: ds.rs
user_viewport_result/Diving-2OzlksZBTiA/: uid-00d6d7f2-23df-4062-84dd-d5e99183dae1.txt  uid-01823dee-77a6-4841-b5f2-5aa0d113f3d3.txt  uid-0455b7e7-fad6-4c93-a0f8-d155bdf85bac.txt  uid-0f33f0d6-6c9a-4641-b685-76397da22681.txt  uid-11d49395-d270-4c58-b6dd-8894a454c0d3.txt  uid-16e3d8ae-145f-4350-ad7e-72b4c9d56e09.txt  uid-17954da2-a83b-46ac-af8b-f32943d2e36a.txt  uid-25d879c9-a335-4f5d-a9ed-e70e9a44a0e6.txt  uid-2bbac8c6-3809-41a5-980f-62e74998835a.txt  uid-31d3a60c-591c-443f-9c96-d49131781f46.txt  uid-36ecf2b5-08c9-4c61-a72f-c4697e395064.txt  uid-3ba968b8-887c-460e-a5f2-86295957d731.txt  uid-41345251-86f2-410c-8b1f-71b7b406898a.txt  uid-441b41ec-b057-4c98-9a3a-eb410691ebef.txt  uid-4d78383b-3997-44ee-a859-57110451855a.txt  uid-5116a7db-6677-49c5-85ec-ed072a2cb433.txt  uid-5481e94e-ac89-44cc-9ad2-b5a60c9a7795.txt  uid-57edef96-9989-4e51-aa19-4f05676b4e0c.txt  uid-5e7448ba-24e5-4faf-a422-7b6687a20a8c.txt  uid-5f355ec2-0e10-484b-afd7-f4b63a0c944e.txt  uid-640c0a14-28c1-4bc6-9259-34c2e36873c4.txt  uid-649577fb-e293-4155-98b6-5a33dc3aa7bd.txt  (+35 more)
(+282 files in other folders)
